# math-animation-mcp

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  render_gaokao_2025.py
docs/faq/: common-errors.md
docs/getting-started/: first-animation.md  install-docker.md
docs/tutorials/: customize-style.md
examples/: visual_cases_demo.py
examples/basic_math/: test_all_cases.py  test_long_cases.py
examples/gaokao_2024/: gk2024_16_conic.py  gk2024_17_solid.py  gk2024_18_derivative.py
examples/gaokao_2025/: gaokao_2025_17_solid.py  gaokao_2025_18_ellipse.py  gaokao_2025_19_derivative.py
examples/leetcode/: lc_01_two_sum.py  lc_102_level_order.py  lc_206_reverse_list.py
src/math_animation_mcp/: __init__.py  __main__.py  cli.py  server.py  web_server.py
src/math_animation_mcp/config/: default_prefs.yaml  schema.py
src/math_animation_mcp/styles/: presets.py
src/math_animation_mcp/templates/algebra/: function_graph.py  quadratic.py
src/math_animation_mcp/templates/calculus/: derivative_tangent.py  integral_area.py
src/math_animation_mcp/templates/cs/: sorting_algo.py
src/math_animation_mcp/templates/geometry/: conic_sections.py  pythagorean.py
src/math_animation_mcp/templates/physics/: projectile.py
src/math_animation_mcp/tools/: export_tools.py  input_tools.py  personalization_tools.py  render_tools.py  repair_tools.py  template_tools.py
src/math_animation_mcp/utils/: chinese_support.py  ffmpeg_postprocess.py  file_manager.py  sandbox.py
(+2 files in other folders)
